# dodo-table-events

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  tz_v0.1_original.md
models/opencv_dnn/: person_detection_mediapipe_2023mar.anchors.npy
publish/minimal/video1/: raw_frames.pkl  report.txt
publish/minimal/video2/: raw_frames.pkl  raw_people.jsonl  report.html  report.txt
publish/minimal/video3/: raw_frames.pkl  report.txt
roi_presets/: video1_table.json  video2_table.json  video3_table.json
scripts/: combined_report.py  download_models.py  download_videos.py  download_yolo_weights.py  export_min_artifacts.py  html_report_v01.py  install_yolo38.py  run.sh  setup.sh
